corrected sections not fitting the screen: vertically and horizontally

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,6 +75,11 @@ nav {
 	box-shadow: 0 8px 50px -6px rgba(255,245,108,0.5);
 }
 
+.row{
+	margin-right: 0;
+	margin-left: 0;
+}
+
 #scripler, #features, #about {
 	padding: 50px 20px 100px;
 	background-image: -webkit-radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%); /* WebKit */
@@ -82,6 +87,7 @@ nav {
 	background-image: -ms-radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%); /* IE10+ */
 	background-image: -o-radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%); /* Opera */
 	background-image: radial-gradient(center center, circle contain, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.1) 100%);
+	height:100vh;
 }
 
 #scripler {
